Added pop up message, employee add, edit and delete as well as API, tag component, logo, modal for image

--- a/resources/frontend/components/Employees/AddEditEmployee.module.scss
+++ b/resources/frontend/components/Employees/AddEditEmployee.module.scss
@@ -17,7 +17,7 @@
     margin-bottom: 20px;
     display: flex;
     align-items: center;
-    color: $c_mediumgray;
+    color: $c_primary;
 }
 
 .addEditEmployeeContainer {
