--- a/resources/frontend/components/Dropdown.module.scss
+++ b/resources/frontend/components/Dropdown.module.scss
@@ -15,7 +15,7 @@
 }
 
 .dropdownLabel {
-    color: $c_darkgray;
+    color: $c_primary;
     font-size: 16px;
     font-weight: 600;
     margin-bottom: 10px;
