--- a/resources/frontend/components/Input.module.scss
+++ b/resources/frontend/components/Input.module.scss
@@ -33,16 +33,23 @@
 }
 
 .inputLabel {
-    color: $c_darkgray;
+    color: $c_primary;
     font-size: 16px;
     font-weight: 600;
     margin-bottom: 10px;
+    display: flex;
+    column-gap: 5px;
+}
+
+.inputLabel span {
+    color: $c_mediumgray;
 }
 
 .inputError {
     color: #d62828 !important;
     margin: 5px !important;
     font-size: 14px !important;
+    font-weight: normal !important;
 }
 
 .inputPeso {
