--- a/resources/frontend/components/TopBar.module.scss
+++ b/resources/frontend/components/TopBar.module.scss
@@ -3,12 +3,12 @@
 .topBar {
     background-color: $b_primary;
     height: 70px;
-    width: calc(100% - 330px);
+    width: calc(100% - 310px);
     position: absolute;
     display: flex;
     top: 0;
     right: 0;
-    padding: 0 50px 0 50px;
+    padding: 0 40px;
     justify-content: space-between;
     border-bottom: 1px solid $c_gray;
     position: fixed;
