--- a/resources/frontend/components/Button.module.scss
+++ b/resources/frontend/components/Button.module.scss
@@ -11,6 +11,6 @@
     display: flex;
     column-gap: 10px;
     align-items: center;
-    align-content: center;
+    justify-content: center;
     cursor: pointer;
 }
