--- a/resources/frontend/components/Orders/OrderItems.module.scss
+++ b/resources/frontend/components/Orders/OrderItems.module.scss
@@ -37,6 +37,12 @@
     margin: 0 auto 30px 0;
 }
 
+.infoContent {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+
 .infoContainer {
     padding: 30px;
     border: 1px solid #d7d7d7;
@@ -46,6 +52,22 @@
     display: flex;
     flex-direction: column;
     row-gap: 30px;
+}
+
+.infoTotal {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+.infoTotalDetails {
+    display: flex;
+    justify-content: space-between;
+}
+
+.infoButton {
+    width: fit-content;
+    align-self: end;
 }
 
 .infoTable {
