--- a/resources/frontend/components/Sidebar.module.scss
+++ b/resources/frontend/components/Sidebar.module.scss
@@ -5,6 +5,9 @@
     height: 100dvh;
     width: 230px;
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     .barLinkContainer {
         margin-top: 10px;
@@ -14,5 +17,22 @@
             font-size: 14px;
             margin: 15px 0 10px 10px;
         }
+    }
+
+    .sideBarSettings {
+        position: absolute;
+        background-color: $b_primary;
+        padding: 15px;
+        bottom: 54px;
+        left: 20px;
+        border: 1px solid $c_gray;
+        border-radius: 5px;
+        display: none;
+        flex-direction: column;
+        row-gap: 10px;
+    }
+
+    .sideBarSettingsLink:hover .sideBarSettings {
+        display: flex !important;
     }
 }
