--- a/resources/frontend/assets/scss/main.module.scss
+++ b/resources/frontend/assets/scss/main.module.scss
@@ -10,6 +10,9 @@ $c_gray: #d7d7d7;
 $c_mediumgray: #989898;
 $c_darkgray: #737373;
 $c_dark: #3f3f3f;
+$c_red: #dc272e;
+$c_dimred: #d67e81;
+
 body {
     margin: 0;
     font-family: "Manrope", sans-serif;
