--- a/resources/frontend/pages/Main.module.scss
+++ b/resources/frontend/pages/Main.module.scss
@@ -48,3 +48,9 @@
     display: flex;
     flex-direction: row-reverse;
 }
+
+//Dashboard
+.dashboardSideBar {
+    display: flex;
+    background-color: $c_dimred;
+}
