--- a/resources/frontend/assets/scss/main.module.scss
+++ b/resources/frontend/assets/scss/main.module.scss
@@ -10,8 +10,8 @@ $c_gray: #d7d7d7;
 $c_mediumgray: #989898;
 $c_darkgray: #737373;
 $c_dark: #3f3f3f;
-$c_red: #dc272e;
-$c_dimred: #d67e81;
+$c_red: #1ea1d7;
+$c_dimred: #7fc5e4;
 
 body {
     margin: 0;
