--- a/resources/frontend/components/Role.module.scss
+++ b/resources/frontend/components/Role.module.scss
@@ -3,7 +3,7 @@
 .role {
     font-size: 15px;
     font-weight: bolder;
-    background-color: #d62828;
+    background-color: $c_red;
     color: $c_secondary;
     padding: 14px 18px;
     border-radius: 40px;
