--- a/resources/frontend/components/Customers/CustomerOrders.module.scss
+++ b/resources/frontend/components/Customers/CustomerOrders.module.scss
@@ -8,6 +8,7 @@
     top: 71px;
     right: 0;
     padding: 40px 40px 40px 40px;
+    overflow: auto;
 }
 
 .purchasesHeader {
@@ -49,7 +50,6 @@
 
 .purchasesInfo {
     background-color: $b_primary;
-    background-color: #ffffff;
     padding: 30px;
     border: 1px solid #d7d7d7;
     border-radius: 5px;
@@ -65,7 +65,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 20px;
-    width: max-content;
+    width: 100%;
 }
 
 .purchasesInfoDetails {
