--- a/resources/frontend/components/OrderItem.module.scss
+++ b/resources/frontend/components/OrderItem.module.scss
@@ -7,6 +7,7 @@
         border-bottom: 1px solid $c_gray;
         padding-bottom: 20px;
         margin-bottom: 20px;
+        align-items: center;
 
         .orderItemImageContainer {
             height: 70px;
