--- a/resources/frontend/components/Orders/OrderItems.module.scss
+++ b/resources/frontend/components/Orders/OrderItems.module.scss
@@ -8,6 +8,7 @@
     top: 71px;
     right: 0;
     padding: 40px;
+    overflow: auto;
 }
 
 .detailHeader {
@@ -126,7 +127,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 20px;
-    width: max-content;
+    width: 100%;
 }
 
 .infoDetails {
