--- a/resources/frontend/components/Sidebar.module.scss
+++ b/resources/frontend/components/Sidebar.module.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    z-index: 100;
 
     .barLinkContainer {
         margin-top: 10px;
